@@ -1,0 +1,51 @@
+# -*- Mode: Python; coding: utf-8; indent-tabs-mode: nil; tab-width: 4 -*-
+### BEGIN LICENSE
+# Copyright (C) 2011-2012 Marc Deslauriers <marc.deslauriers@canonical.com>
+# This program is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License version 3, as published
+# by the Free Software Foundation.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranties of
+# MERCHANTABILITY, SATISFACTORY QUALITY, or FITNESS FOR A PARTICULAR
+# PURPOSE.  See the GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program.  If not, see <http://www.gnu.org/licenses/>.
+### END LICENSE
+
+"""GUI helpers for an Ubuntu application."""
+import os
+
+from gi.repository import Gtk
+
+from . Builder import Builder
+from . pasaffeconfig import get_data_file
+
+import gettext
+from gettext import gettext as _
+gettext.textdomain('pasaffe')
+
+
+def get_builder(builder_file_name):
+    """Return a fully-instantiated Gtk.Builder instance from specified ui
+    file
+
+    :param builder_file_name: The name of the builder file, without extension.
+        Assumed to be in the 'ui' directory under the data path.
+    """
+    # Look for the ui file that describes the user interface.
+    ui_filename = get_data_file('ui', '%s.ui' % (builder_file_name,))
+    if not os.path.exists(ui_filename):
+        ui_filename = None
+
+    builder = Builder()
+    builder.set_translation_domain('pasaffe')
+    builder.add_from_file(ui_filename)
+    return builder
+
+
+def show_uri(parent, link):
+    screen = parent.get_screen()
+    Gtk.show_uri(screen, link, Gtk.get_current_event_time())
+
