@@ -7,6 +7,7 @@ For a detailed list of changes, please see ChangeLog.
    - Updated translations
 
  * Bug fixes:
+   - Command line tools can now be run without a GUI
 
 0.21 (2012-08-21)
 
